<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/frameL_height"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linContainer">

<TextView
    android:id="@+id/tv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="@dimen/tV_ts"
    android:textColor="@color/white"
    android:text="@string/_textView"
    android:maxLines="1"
    android:ellipsize="end"
    android:layout_gravity="bottom|end"
    android:layout_marginHorizontal="@dimen/tV_mh"/>

        
        <Button
            style="@style/Orange.button"
            android:id="@+id/btn_2ndA"
            android:layout_width="@dimen/btn_0_width"
            android:text="@string/btn_2ndA"
            android:textSize="@dimen/btn_2ndA_ts"
            android:layout_margin="@dimen/margin_betweenButtons" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">
        <LinearLayout
            android:paddingHorizontal="@dimen/margin_betweenButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="@dimen/buttonsLinearL_pv">

            <com.google.android.material.button.MaterialButton
               style="@style/Grey.button"
                android:text="@string/ac"
                android:onClick="onNumberClick"
                android:id="@+id/btn_clear"
               />

            <com.google.android.material.button.MaterialButton
                android:text="@string/_positive_negative"
                android:layout_marginHorizontal="@dimen/margin_betweenButtons"
               style="@style/Grey.button"/>

            <com.google.android.material.button.MaterialButton
              style="@style/Grey.button"
                android:text="@string/percent"
                android:layout_marginEnd="@dimen/margin_betweenButtons"/>

            <com.google.android.material.button.MaterialButton
                android:text="@string/divide"
                android:id="@+id/btn_divide"
                android:onClick="onOperatorClick"
               style="@style/Orange.button"/>

        </LinearLayout>
        <LinearLayout
            android:paddingHorizontal="@dimen/buttonsLinearL_ph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="@dimen/buttonsLinearL_pv">

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.grey.button"
                android:text="@string/_7"
                android:id="@+id/btn_7"
                android:onClick="onNumberClick"
                />

            <com.google.android.material.button.MaterialButton
                android:text="@string/_8"
                android:id="@+id/btn_8"
                android:onClick="onNumberClick"
                android:layout_marginHorizontal="18dp"
                style="@style/Dark.grey.button"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.grey.button"
                android:text="@string/_9"
                android:id="@+id/btn_9"
                android:onClick="onNumberClick"
                android:layout_marginEnd="@dimen/margin_betweenButtons"/>

            <com.google.android.material.button.MaterialButton
                android:text="@string/multiply"
                android:id="@+id/btn_multiply"
                android:onClick="onOperatorClick"
                style="@style/Orange.button"/>

        </LinearLayout>
        <LinearLayout
            android:paddingHorizontal="@dimen/buttonsLinearL_ph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="@dimen/buttonsLinearL_pv">

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.grey.button"
                android:text="@string/_4"
                android:onClick="onNumberClick"
                android:id="@+id/btn_4"
                />

            <com.google.android.material.button.MaterialButton
                android:text="@string/_5"
                android:onClick="onNumberClick"
                android:id="@+id/btn_5"
                android:layout_marginHorizontal="@dimen/margin_betweenButtons"
                style="@style/Dark.grey.button"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.grey.button"
                android:text="@string/_6"
                android:onClick="onNumberClick"
                android:id="@+id/btn_6"
                android:layout_marginEnd="@dimen/margin_betweenButtons"/>

            <com.google.android.material.button.MaterialButton
                android:text="@string/minus"
                android:id="@+id/btn_minus"
                android:onClick="onOperatorClick"
                style="@style/Orange.button"/>

        </LinearLayout>
        <LinearLayout
            android:paddingHorizontal="@dimen/buttonsLinearL_ph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="@dimen/buttonsLinearL_pv">

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.grey.button"
                android:text="@string/_1"
                android:id="@+id/btn_1"
                android:onClick="onNumberClick"
                />

            <com.google.android.material.button.MaterialButton
                android:text="@string/_2"
                android:id="@+id/btn_2"
                android:onClick="onNumberClick"
                android:layout_marginHorizontal="@dimen/margin_betweenButtons"
                style="@style/Dark.grey.button"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.grey.button"
                android:text="@string/_3"
                android:id="@+id/btn_3"
                android:onClick="onNumberClick"
                android:layout_marginEnd="@dimen/margin_betweenButtons"/>

            <com.google.android.material.button.MaterialButton
                android:text="@string/plus"
                android:id="@+id/btn_plus"
                android:onClick="onOperatorClick"
                style="@style/Orange.button"/>

        </LinearLayout>
        <LinearLayout
            android:paddingHorizontal="@dimen/buttonsLinearL_ph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="@dimen/buttonsLinearL_pv">

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.grey.button"
                android:text="@string/_0"
                android:id="@+id/btn_0"
                android:onClick="onNumberClick"
                android:layout_width="@dimen/btn_0_width"
                android:textAlignment="textStart"
                android:paddingStart="@dimen/btn_0_ps"
                />

            <com.google.android.material.button.MaterialButton
                android:text="@string/point"
                android:layout_marginHorizontal="@dimen/margin_betweenButtons"
                style="@style/Dark.grey.button"/>

            <com.google.android.material.button.MaterialButton
                android:text="@string/equal"
                android:id="@+id/btn_equal"
                android:onClick="onEqualsClick"
                style="@style/Orange.button"/>

        </LinearLayout>


    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>